Switch to Docker deployment for GeoDjango support

--- a/render.yaml
+++ b/render.yaml
@@ -7,9 +7,7 @@ databases:
 services:
   - type: web
     name: django-ecommerce
-    env: python
-    buildCommand: "./build.sh"
-    startCommand: "gunicorn djecommerce.wsgi:application"
+    env: docker
     plan: free
     envVars:
       - key: PYTHON_VERSION
